--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+</head>
+<body>
+    <header class="header">
+        <a href="#" class="logo">Portfolio</a>
 
+        <nav class="navbar">
+            <a href="#" style="--i:1" class="active">Home</a>
+            <a href="#" style="--i:2">About</a>
+            <a href="#" style="--i:3">Skill</a>
+            <a href="#" style="--i:4">Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-content">
+            <h3>Hi, It's Me</h3>
+            <h1>Saif Mahmud</h1>
+            <h3>And I'm a <span class="text"></span></h3>
+            <p>I am a web designer with a little knowledge. 
+                I learned programming from MIMO android application. 
+                It was a beautiful journey. Besides some websites also helped me a lot in learning. 
+                If you are a beginner, feel free to contact with me.
+            </p>
+            <div class="home-sci">
+                <a href="#" style="--i:5"><i class='bx bxl-facebook'></i></a>
+                <a href="#" style="--i:6"><i class='bx bxl-instagram' ></i></a>
+                <a href="#" style="--i:7"><i class='bx bxl-twitter' ></i></a>
+                <a href="#" style="--i:8"><i class='bx bxl-whatsapp'></i></a>
+                <a href="#" style="--i:9"><i class='bx bxl-youtube' ></i></a>
+            </div>
+            <a href="#" class="btn-box">More About Me</a>
+        </div>
+    </section>
+    <script src="Script.js"></script>
+</body>
+</html>
