Added some text to paragraph

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>I am a web designer with a little knowledge. 
                 I learned programming from MIMO android application. 
                 It was a beautiful journey. Besides some websites also helped me a lot in learning. 
-                If you are a beginner, feel free to contact with me.
+                If you are a beginner, feel free to contact with me. I am also trying to learn typing fast.
             </p>
             <div class="home-sci">
                 <a href="#" style="--i:5"><i class='bx bxl-facebook'></i></a>
